--- a/vorstand/index.html
+++ b/vorstand/index.html
@@ -1,9 +1,9 @@
 ---
-layout: base
+layout: default
 title: Vorstand
 description: ''
 background: backgrounds/background.jpg
-menu_community: yes
+menu_vorstand: yes
 
 ---
 
