--- a/team/index.html
+++ b/team/index.html
@@ -1,9 +1,9 @@
 ---
-layout: base
+layout: default
 title: Team
 description: ''
 background: backgrounds/background.jpg
-menu_community: yes
+menu_team: yes
 
 ---
 
