--- a/index.html
+++ b/index.html
@@ -1,130 +1,133 @@
 ---
-layout: base
-title: Offenes Wissen für ein digitales Zeitalter
+layout: start
+title: Offenes Wissen für die digitale Gesellschaft
 description: ''
-headline: Wir gestalten die digitale Gesellschaft<br/>mit offenem Wissen und Werkzeugen.
 home: true
 ---
 
-<div class="container">
-
-  <div class="row padded-row">
-    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
-      <div class="showcase">
-        <a href="{{ site.baseurl }}projekte/codeforde/"><img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/></a>
-        <h4 class="kpi">
-          20<br/>
-          OK Labs
-        </h4>
-        <p class="detail">
-            entwickeln Tools für <a href="{{ site.baseurl }}projekte/codeforde/">digitale Städte</a> in ganz Deutschland.
-        </p>
-      </div>
-    </div>
-    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
-      <div class="showcase">
-        <a href="{{ site.baseurl }}projekte/codingdavinci/"><img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/></a>
-        <h4 class="kpi">
-          325,000<br/>
-          Kulturdaten
-        </h4>
-        <p class="detail">
-            wurden bei <a href="{{ site.baseurl }}projekte/codingdavinci/">Coding da Vinci</a> für alle zugänglich und nutzbar gemacht.
-        </p>
-      </div>
-    </div>
-    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
-      <div class="showcase">
-        <a href="{{ site.baseurl }}projekte/jugendhackt/"><img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
-        <h4 class="kpi">
-          120<br/>
-          Jugend-Hacker
-        </h4>
-        <p class="detail">
-            experimentieren bei <a href="{{ site.baseurl }}projekte/jugendhackt/">Jugend hackt</a> mit Code und Freundschaft.
-        </p>
-      </div>
-    </div>
-    <div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
-      <div class="showcase">
-        <a href="{{ site.baseurl }}projekte/fragdenstaat/"><img src="{{ site.staticurl }}images/projects/fragdenstaat_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
-        <h4 class="kpi">
-          7100+<br/>
-          Anfragen
-        </h4>
-        <p class="detail">
-            wurden bei <a href="{{ site.baseurl }}projekte/fragdenstaat/">FragDenStaat.de</a> von Bürgen an Behörden gestellt.
-        </p>
-      </div>
-    </div>
-  </div>
+<div class="start-banner">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<img src="{{ site.staticurl }}images/logo_text_w.png" alt="Open Knowledge Foundation Deutschland"/>
+			</div>
+			<div class="col-md-8">
+				<h1 class="start-headline">Offenes Wissen<br/>für die digitale Gesellschaft</h1>
+			</div>
+		</div>
+	</div>
 </div>
 
+<div class="container start-opener">
+	<div class="row padded-row">
+		<div class="col-md-12">
+			<p class="intro">
+				Die Open Knowledge Foundation Deutschland ist ein gemeinnütziger Verein,<br/>
+				der sich für offenes Wissen, offene Daten, Transparenz und Beteiligung einsetzt.
+			</p>
+			<p class="intro">
+				Hier kannst du mehr über unsere <a href="{{ site.baseurl }}verein/">Organisation</a>, unsere <a href="{{ site.baseurl }}mission/">Ziele</a> und unsere <a href="{{ site.baseurl }}projekte/">Projekte</a> erfahren.
+			</p>
+		</div>
+		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
+			<div class="showcase">
+				<a href="{{ site.baseurl }}projekte/codeforde/"><img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/></a>
+				<h4 class="kpi">
+					20<br/>
+					OK Labs
+				</h4>
+
+				<p class="detail">
+					entwickeln Tools für <a href="{{ site.baseurl }}projekte/codeforde/">digitale Städte</a> in ganz Deutschland.
+				</p>
+			</div>
+		</div>
+		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
+			<div class="showcase">
+				<a href="{{ site.baseurl }}projekte/codingdavinci/"><img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/></a>
+				<h4 class="kpi">
+					325,000<br/>
+					Kulturdaten
+				</h4>
+
+				<p class="detail">
+					wurden bei <a href="{{ site.baseurl }}projekte/codingdavinci/">Coding da Vinci</a> für alle zugänglich und nutzbar gemacht.
+				</p>
+			</div>
+		</div>
+		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
+			<div class="showcase">
+				<a href="{{ site.baseurl }}projekte/jugendhackt/"><img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
+				<h4 class="kpi">
+					120<br/>
+					Jugend-Hacker
+				</h4>
+
+				<p class="detail">
+					experimentieren bei <a href="{{ site.baseurl }}projekte/jugendhackt/">Jugend hackt</a> mit Code und Freundschaft.
+				</p>
+			</div>
+		</div>
+		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
+			<div class="showcase">
+				<a href="{{ site.baseurl }}projekte/fragdenstaat/"><img src="{{ site.staticurl }}images/projects/fragdenstaat_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
+				<h4 class="kpi">
+					7100+<br/>
+					Anfragen
+				</h4>
+
+				<p class="detail">
+					wurden bei <a href="{{ site.baseurl }}projekte/fragdenstaat/">FragDenStaat.de</a> von Bürgen an Behörden gestellt.
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
 
 <div class="dark-section">
-  <div class="container">
-    <div class="col-center padded-row">
-      <h2>Wer wir sind</h2>
-      <p>
-        Die Open Knowledge Foundation Deutschland ist ein gemeinnütziger Verein, der sich für offenes Wissen, offene Daten, Transparenz und Beteiligung einsetzt. Hier kannst du mehr über unsere Organisation, unsere Ziele und unsere Projekte erfahren. Als gemeinnützige Organisation freuen wir uns über jede Spende!
-      </p>
-      <ul class="nav-list">
-        <li>
-          <a href="{{ site.baseurl }}spenden/">Find ich gut. Da will ich spenden.</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}mission/">Stop. Erstmal mehr erfahren.</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+	<div class="container padded-row">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Spenden</h2>
+
+				<p>Unsere Arbeit ist unabhängig, überparteilich, interdisziplinär und nicht-kommerziell. Fast alle unserer Projekte leben vom ehrenamtlichen Engagement ihrer Unterstützer. Doch auch ehrenamtliches Engagement kostet Geld.
+					Deshalb freuen wir uns über jede Spende, damit wir den Menschen, die sich unter dem Dach der Open Knowledge Foundation Deutschland für freies Wissen, offene Daten und Beteiligung einsetzen, weiterhin eine gute
+					Infrastruktur bieten können. Gern nehmen wir auch projektbezogene Sachspenden an - als gemeinnützige Organisation freuen wir uns über jede Spende!</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2 col-xs-offset-2 col-xs-8">
+				<p><a href="{{ site.baseurl }}spenden/" class="highlight-link">Find ich gut. Da will ich spenden.</a></p>
+
+				<p><a href="{{ site.baseurl }}mission/" class="highlight-link">Stop. Erstmal mehr erfahren.</a></p>
+			</div>
+		</div>
+	</div>
 </div>
 
-<div class="dark-section darker-color">
-  <div class="container">
-    <div class="col-center padded-row">
-      <h2>Newsletter</h2>
-      <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form" target="_blank" role="form">
-        <p>
-          Du möchtest über die Open Knowledge Foundation auf dem Laufenden bleiben?
-          <br>
-          Dann trag Dich in unseren monatlichen Newsletter ein:
-        </p>
-        <div class="row">
-          <div class="col-lg-5 col-lg-offset-2">
-            <label for="mce-EMAIL" class="sr-only" >E-Mail</label>
-            <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required >
-          </div>
-          <div class="col-lg-3">
-            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">Abonnieren!</button>
-            <div style="position: absolute; left: -5000px;">
-              <input type="text" name="b_929f1e07936386d34833e20d1_bb63fcab72" value="">
-              <!-- set to newsletter only-->
-              <input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
+<div class="container padded-row">
+	<div class="row">
+		<div class="col-md-12">
+			<h2>Newsletter</h2>
 
-<div class="container">
-  <h2>Drei unserer Projekte</h2>
-  <div class="row padded-row">
-    {% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
-    {% for project in projects limit:3 %}
-      {% include project_list.html project=project %}
-    {% endfor %}
-  </div>
-</div>
-
-
-<div class="full-box">
-  <div class="container">
-    <h3 class="subtle-section">Neueste Blog-Einträge</h3>
-    {% for post in site.posts limit:3 %}
-      {% include post_preview.html post=post %}
-    {% endfor %}
-  </div>
+			<p>Du möchtest über die Open Knowledge Foundation auf dem Laufenden bleiben?<br>Dann trag Dich in unseren monatlichen Newsletter ein!</p>
+		</div>
+	</div>
+	<form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form" target="_blank"
+		  role="form">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-2 col-xs-12 padded-top">
+				<label for="mce-EMAIL" class="sr-only">E-Mail</label>
+				<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required>
+			</div>
+			<div class="col-md-2 col-xs-12 padded-top">
+				<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default pull-right">Abonnieren</button>
+				<div style="position: absolute; left: -5000px;">
+					<input type="text" name="b_929f1e07936386d34833e20d1_bb63fcab72" value="">
+					<!-- set to newsletter only-->
+					<input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
+				</div>
+			</div>
+		</div>
+	</form>
 </div>
