--- a/projekte/index.html
+++ b/projekte/index.html
@@ -11,12 +11,11 @@ background: backgrounds/projekte.jpg
   <h2>Projekte</h2>
   <p>
     Wir bringen Menschen zusammen, die digitale Bürger-Werkzeuge bauen, und
-    wir betreiben offene Web-Infrastruktur für unsere Demokratie.<br/>
-    Das sind unsere Projekte:
+    wir betreiben offene Web-Infrastruktur für unsere Demokratie.
   </p>
 </div>
 
-<div class="row">
+<div class="row flex-row">
 {% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
@@ -29,16 +28,15 @@ background: backgrounds/projekte.jpg
 </div>
 
 <h3 class="subtle-section">Events</h3>
-<div class="row">
+<div class="row flex-row">
 {% assign projects = site.projects | where: "type","event" | sort:"date","last" %}
 {% for project in projects reversed %}
   {% include project_list.html project=project %}
 {% endfor %}
-
 </div>
 
 <h3 class="subtle-section">Forschungsprojekte</h3>
-<div class="row">
+<div class="row flex-row">
 {% assign projects = site.projects | where: "type", "research" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
@@ -46,7 +44,7 @@ background: backgrounds/projekte.jpg
 </div>
 
 <h3 class="subtle-section">Archiv</h3>
-<div class="row">
+<div class="row flex-row">
 {% assign projects = site.projects | where: "type", "archive"  | sort:"featured","last" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
