--- a/projekte/index.html
+++ b/projekte/index.html
@@ -15,7 +15,7 @@ background: backgrounds/projekte.jpg
   </p>
 </div>
 
-<div class="row flex-row">
+<div class="row row-flex row-flex-wrap">
 {% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
@@ -28,7 +28,7 @@ background: backgrounds/projekte.jpg
 </div>
 
 <h3 class="subtle-section">Events</h3>
-<div class="row flex-row">
+<div class="row row-flex row-flex-wrap">
 {% assign projects = site.projects | where: "type","event" | sort:"date","last" %}
 {% for project in projects reversed %}
   {% include project_list.html project=project %}
@@ -36,7 +36,7 @@ background: backgrounds/projekte.jpg
 </div>
 
 <h3 class="subtle-section">Forschungsprojekte</h3>
-<div class="row flex-row">
+<div class="row row-flex row-flex-wrap">
 {% assign projects = site.projects | where: "type", "research" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
@@ -44,7 +44,7 @@ background: backgrounds/projekte.jpg
 </div>
 
 <h3 class="subtle-section">Archiv</h3>
-<div class="row flex-row">
+<div class="row row-flex row-flex-wrap">
 {% assign projects = site.projects | where: "type", "archive"  | sort:"featured","last" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
