--- a/themen/index.html
+++ b/themen/index.html
@@ -4,28 +4,20 @@ title: Themen
 menu_themen: yes
 ---
 {% assign themen = site.pages|where:"layout","thema"|sort:"title" %}
-
 <div class="lurking-header">
 	<h1>Themen</h1>
 	<p>Der Open Knowledge Foundation Deutschland e.V. versteht sich als aktiver Teil der deutschen und europäischen Zivilgesellschaft. Wir fördern und stärken die Bürgerrechte, wie sie im Grundgesetz und in der Europäischen
 		Menschenrechtskonvention verankert sind. Wir setzen uns dabei insbesondere für folgende Themen der digitalen Gesellschaft ein:</p>
 </div>
-
 {% for thema in themen %}
-<div class="themen-item">
-	<a href="{{ site.baseurl }}{{ thema.url|replace_first:'/',''|replace_first:'index.html','' }}">
-		<div class="row flex-row">
-			<div class="col-md-4 flex-col themen-image-col">
-				<div class="themen-image" {% if thema.background.size> 0 %}style="background-image:url('{{ site.staticurl }}images/{{ thema.background }}');"{% endif %}></div>
-			</div>
-			<div class="col-md-8 themen-col">
-				<h2>{{ thema.title }}</h2>
-
-				<p>{{ thema.teaser }}</p>
-
-				<p><span class="highlight-link">mehr erfahren</span></p>
-			</div>
-		</div>
-	</a>
+<div class="row themen-item">
+	<div class="col-md-4 themen-image" {% if thema.background.size> 0 %}style="background-image:url('{{ site.staticurl }}images/{{ thema.background }}');"{% endif %}></div>
+	<div class="col-md-8 themen-col">
+		<a href="{{ site.baseurl }}{{ thema.url|replace_first:'/',''|replace_first:'index.html','' }}">
+			<h2>{{ thema.title }}</h2>
+			<p>{{ thema.teaser }}</p>
+			<p><span class="highlight-link">mehr erfahren</span></p>
+		</a>
+	</div>
 </div>
 {% endfor %}
