--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ home: true
 <div class="start-banner">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4">
-				<img src="{{ site.staticurl }}images/logo_text_w.png" alt="Open Knowledge Foundation Deutschland"/>
-			</div>
-			<div class="col-md-8">
+			<!--<div class="col-md-4">-->
+				<!--<img src="{{ site.staticurl }}images/logo_text_w.png" alt="Open Knowledge Foundation Deutschland"/>-->
+			<!--</div>-->
+			<div class="col-md-12">
 				<h1 class="start-headline">Offenes Wissen<br/>für die digitale Gesellschaft</h1>
 			</div>
 		</div>
@@ -21,46 +21,40 @@ home: true
 <div class="container start-opener">
 	<div class="row padded-row">
 		<div class="col-md-12">
+			<p class="intro">{% t start.Intro %}</p>
 			<p class="intro">
-				Die Open Knowledge Foundation Deutschland ist ein gemeinnütziger Verein,<br/>
-				der sich für offenes Wissen, offene Daten, Transparenz und Beteiligung einsetzt.
-			</p>
-			<p class="intro">
-				Hier kannst du mehr über unsere <a href="{{ site.baseurl }}verein/">Organisation</a>, unsere <a href="{{ site.baseurl }}mission/">Ziele</a> und unsere <a href="{{ site.baseurl }}projekte/">Projekte</a> erfahren.
+				Hier kannst du mehr über unsere <a href="{{ site.baseurl }}/verein/">Organisation</a>, unsere <a href="{{ site.baseurl }}/mission/">Ziele</a> und unsere <a href="{{ site.baseurl }}/projekte/">Projekte</a> erfahren.
 			</p>
 		</div>
 		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
 			<div class="showcase">
-				<a href="{{ site.baseurl }}projekte/codeforde/"><img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/></a>
+				<a href="{{ site.baseurl }}/projekte/codeforde/"><img src="{{ site.staticurl }}images/projects/codeforde_square.jpg" alt="OK Labs" class="img-circle"/></a>
 				<h4 class="kpi">
-					20<br/>
-					OK Labs
+					20<br/>OK Labs
 				</h4>
 
 				<p class="detail">
-					entwickeln Tools für <a href="{{ site.baseurl }}projekte/codeforde/">digitale Städte</a> in ganz Deutschland.
+					entwickeln Tools für <a href="{{ site.baseurl }}/projekte/codeforde/">digitale Städte</a> in ganz Deutschland.
 				</p>
 			</div>
 		</div>
 		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
 			<div class="showcase">
-				<a href="{{ site.baseurl }}projekte/codingdavinci/"><img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/></a>
+				<a href="{{ site.baseurl }}/projekte/codingdavinci/"><img src="{{ site.staticurl }}images/projects/codingdavinci_square.jpg" alt="Coding da Vinci" class="img-circle"/></a>
 				<h4 class="kpi">
-					325,000<br/>
-					Kulturdaten
+					325,000<br/>Kulturdaten
 				</h4>
 
 				<p class="detail">
-					wurden bei <a href="{{ site.baseurl }}projekte/codingdavinci/">Coding da Vinci</a> für alle zugänglich und nutzbar gemacht.
+					wurden bei <a href="{{ site.baseurl }}/projekte/codingdavinci/">Coding da Vinci</a> für alle zugänglich und nutzbar gemacht.
 				</p>
 			</div>
 		</div>
 		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
 			<div class="showcase">
-				<a href="{{ site.baseurl }}projekte/jugendhackt/"><img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
+				<a href="{{ site.baseurl }}/projekte/jugendhackt/"><img src="{{ site.staticurl }}images/projects/jugendhackt_square.jpg" alt="Jugend Hackt" class="img-circle"/></a>
 				<h4 class="kpi">
-					120<br/>
-					Jugend-Hacker
+					120<br/>Jugend-Hacker
 				</h4>
 
 				<p class="detail">
@@ -77,7 +71,7 @@ home: true
 				</h4>
 
 				<p class="detail">
-					wurden bei <a href="{{ site.baseurl }}projekte/fragdenstaat/">FragDenStaat.de</a> von Bürgen an Behörden gestellt.
+					wurden bei <a href="{{ site.baseurl }}/projekte/fragdenstaat/">FragDenStaat.de</a> von Bürgen an Behörden gestellt.
 				</p>
 			</div>
 		</div>
