--- a/projekte/index.html
+++ b/projekte/index.html
@@ -17,14 +17,9 @@ background: backgrounds/projekte.jpg
 {% for project in projects %}
   {% include project_list.html project=project %}
 {% endfor %}
-
-{% assign projects = site.pages | where: "type", "tool" %}
-{% for project in projects %}
-  {% include project_list.html project=project %}
-{% endfor %}
 </div>
 
-<h3 class="subtle-section">Events</h3>
+<h3 class="subtle-section">{% t projekte.Events %}</h3>
 <div class="row row-flex row-flex-wrap">
 {% assign projects = site.projects | where: "type","event" | sort:"date","last" %}
 {% for project in projects reversed %}
@@ -32,7 +27,15 @@ background: backgrounds/projekte.jpg
 {% endfor %}
 </div>
 
-<h3 class="subtle-section">Forschungsprojekte</h3>
+<h3 class="subtle-section">{% t projekte.Tools %}</h3>
+<div class="row row-flex row-flex-wrap">
+  {% assign projects = site.projects | where: "type","tool" | sort:"date","last" %}
+  {% for project in projects reversed %}
+  {% include project_list.html project=project %}
+  {% endfor %}
+</div>
+
+<h3 class="subtle-section">{% t projekte.Forschungsprojekte %}</h3>
 <div class="row row-flex row-flex-wrap">
 {% assign projects = site.projects | where: "type", "research" %}
 {% for project in projects %}
@@ -40,7 +43,7 @@ background: backgrounds/projekte.jpg
 {% endfor %}
 </div>
 
-<h3 class="subtle-section">Archiv</h3>
+<h3 class="subtle-section">{% t projekte.Archiv %}</h3>
 <div class="row row-flex row-flex-wrap">
 {% assign projects = site.projects | where: "type", "archive"  | sort:"featured","last" %}
 {% for project in projects %}
