--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@ home: true
 	<div class="row padded-row">
 		<div class="col-md-12">
 			<p class="intro">{% t start.Intro %}</p>
-			<p class="intro">
-				Hier kannst du mehr über unsere <a href="{{ site.baseurl }}/verein/">Organisation</a>, unsere <a href="{{ site.baseurl }}/mission/">Ziele</a> und unsere <a href="{{ site.baseurl }}/projekte/">Projekte</a> erfahren.
-			</p>
+			<p class="intro">{% t start.Willkommen %}</p>
 		</div>
 		<div class="col-xs-offset-2 col-xs-8 col-sm-offset-1 col-sm-5 col-md-3 col-md-offset-0">
 			<div class="showcase">
@@ -82,18 +80,16 @@ home: true
 	<div class="container padded-row">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>Spenden</h2>
+				<h2>{% t start.Spenden %}</h2>
 
-				<p>Unsere Arbeit ist unabhängig, überparteilich, interdisziplinär und nicht-kommerziell. Fast alle unserer Projekte leben vom ehrenamtlichen Engagement ihrer Unterstützer. Doch auch ehrenamtliches Engagement kostet Geld.
-					Deshalb freuen wir uns über jede Spende, damit wir den Menschen, die sich unter dem Dach der Open Knowledge Foundation Deutschland für freies Wissen, offene Daten und Beteiligung einsetzen, weiterhin eine gute
-					Infrastruktur bieten können. Gern nehmen wir auch projektbezogene Sachspenden an - als gemeinnützige Organisation freuen wir uns über jede Spende!</p>
+				<p>{% t start.SpendenText %}</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 col-xs-offset-2 col-xs-8">
-				<p><a href="{{ site.baseurl }}spenden/" class="highlight-link">Find ich gut. Da will ich spenden.</a></p>
+				<p><a href="{{ site.baseurl }}spenden/" class="highlight-link">{% t start.SpendenJa %}</a></p>
 
-				<p><a href="{{ site.baseurl }}mission/" class="highlight-link">Stop. Erstmal mehr erfahren.</a></p>
+				<p><a href="{{ site.baseurl }}mission/" class="highlight-link">{% t start.SpendenNein %}</a></p>
 			</div>
 		</div>
 	</div>
@@ -102,9 +98,8 @@ home: true
 <div class="container padded-row">
 	<div class="row">
 		<div class="col-md-12">
-			<h2>Newsletter</h2>
-
-			<p>Du möchtest über die Open Knowledge Foundation auf dem Laufenden bleiben?<br>Dann trag Dich in unseren monatlichen Newsletter ein!</p>
+			<h2>{% t start.Newsletter %}</h2>
+			<p>{% t start.NewsletterText %}</p>
 		</div>
 	</div>
 	<form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form" target="_blank"
@@ -115,7 +110,7 @@ home: true
 				<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required>
 			</div>
 			<div class="col-md-2 col-xs-12 padded-top">
-				<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default pull-right">Abonnieren</button>
+				<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default pull-right">{% t start.NewsletterJa %}</button>
 				<div style="position: absolute; left: -5000px;">
 					<input type="text" name="b_929f1e07936386d34833e20d1_bb63fcab72" value="">
 					<!-- set to newsletter only-->
