fixed links on startpage

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ home: true
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 col-xs-offset-2 col-xs-8">
-				<p><a href="{{ site.baseurl }}spenden/" class="highlight-link">{% t start.SpendenJa %}</a></p>
-				<p><a href="{{ site.baseurl }}mission/" class="highlight-link">{% t start.SpendenNein %}</a></p>
+				<p><a href="{{ site.baseurl }}/spenden/" class="highlight-link">{% t start.SpendenJa %}</a></p>
+				<p><a href="{{ site.baseurl }}/mission/" class="highlight-link">{% t start.SpendenNein %}</a></p>
 			</div>
 		</div>
 	</div>
