translation: Team, Board, Verein, Impressum

--- a/team/index.en.html
+++ b/team/index.en.html
@@ -12,7 +12,7 @@ menu_team: yes
 <div class="lurking-header">
   <h1>Team</h1>
   <p>
-    Das Team der Open Knowledge Foundation besteht momentan aus {{ staff|size }} Personen. Sie arbeiten in verschiedenen Projekten an den Themen des Vereins. Die Mitglieder des Vorstands haben wir <a href="../vorstand/">hier aufgelistet</a>.
+    Our team has {{ staff|size }} members. Our board members can be found <a href="../vorstand">here</a>.
   </p>
 </div>
 
