blogvorschau, related_pages plugin, projekte format

--- a/index.html
+++ b/index.html
@@ -57,16 +57,33 @@ home: true
 <div class="container padded-row">
 	<div class="row">
 		<div class="col-md-12">
-			<h2>{% t start.Newsletter %}</h2>
-			<p>{% t start.NewsletterText %}</p>
+			<h2>{% t start.AusUnseremBlog %}</h2>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2 col-xs-12 padded-top">
-			<form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form" target="_blank"
-				  role="form">
-				<div class="input-group">
-					<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required>
+	<div class="row row-flex row-flex-wrap">
+		{% assign relatedArray = '' | split:':' %}
+		{% for post in site.posts | limit: 4 %}
+		{% assign relatedArray = relatedArray | push: post %}
+		{% endfor %}
+		{% include post_previews.html posts=relatedArray %}
+	</div>
+</div>
+
+<div class="dark-section">
+	<div class="container padded-row">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>{% t start.Newsletter %}</h2>
+				<p>{% t start.NewsletterText %}</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-8 col-sm-offset-2 col-xs-12 padded-top">
+				<form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form"
+					  target="_blank"
+					  role="form">
+					<div class="input-group">
+						<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required>
 				  	<span class="input-group-btn">
 						<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">{% t start.NewsletterJa %}</button>
 						<div style="position: absolute; left: -5000px;">
@@ -75,8 +92,10 @@ home: true
 							<input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
 						</div>
 				  	</span>
-				</div>
-			</form>
+					</div>
+				</form>
+			</div>
 		</div>
 	</div>
 </div>
+
