better post previews, nicer 404

--- a/404.html
+++ b/404.html
@@ -1,1 +1,20 @@
-<h1>404</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>404</title>
+</head>
+<body style="background-color: #f5f4e9; text-align: center">
+<h1>404 - Seite nicht gefunden</h1>
+
+<p><a href="/">Zur Startseite...</a></p>
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/girliemac/6508022985/in/photostream/" title="404 - Not Found">
+	<img src="https://farm8.staticflickr.com/7172/6508022985_b22200ced0_b.jpg" width="750" height="600" alt="404 - Not Found">
+</a>
+
+<p><sub style="color:black;">Image: <a href="https://creativecommons.org/licenses/by/2.0/">CC-BY 2.0</a> by <a href="https://www.flickr.com/photos/girliemac">Tomomi</a></sub></p>
+
+</body>
+</html>
+
