--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ home: true
 	</div>
 </div>
 
-<div class="dark-section">
+<div class="dark-section darker">
 	<div class="container padded-row">
 		<div class="row">
 			<div class="col-md-12">
