--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 home: true
+card: true
+title: Open Knowledge Foundation Deutschland
+description: Offenes Wissen für die digitale Gesellschaft
 ---
 <div class="start-banner">
 	<div class="container">
