twittercard projekte page

--- a/projekte/index.html
+++ b/projekte/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 title: Projekte
-description: ''
+description: "Wir bringen Menschen zusammen, die digitale Bürger-Werkzeuge bauen, und wir betreiben offene Web-Infrastruktur für unsere Demokratie."
 menu_projekte: yes
+card: true
 background: backgrounds/projekte.jpg
 ---
 
