datenschule campaign section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@ description: Offenes Wissen für die digitale Gesellschaft
 	</div>
 </div>
 
+<div class="container padded-row start-datenschule-banner">
+	<div class="row">
+		<div class="col-md-12">
+			<p>
+				Mit der <a href="https://datenschule.de">Datenschule</a> nehmen wir an der Google Impact Challenge teil. <a href="https://impactchallenge.withgoogle.com/deutschland/charity/open_knowledge">Stimme für uns ab!</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6 col-sm-offset-3 col-xs-12">
+			<a href="https://datenschule.de"><img src="/static/images/backgrounds/datenschule.jpg" class="img-responsive"></a>
+		</div>
+	</div>
+</div>
+
+
 <div class="container start-opener">
 	<div class="row padded-row">
 		<div class="col-md-12">
