das jeweils aktuelle datenschule-bild anzeigen

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ description: Offenes Wissen für die digitale Gesellschaft
 	</div>
 	<div class="row">
 		<div class="col-sm-6 col-sm-offset-3 col-xs-12">
-			<a href="https://datenschule.de"><img src="/static/images/backgrounds/datenschule.jpg" class="img-responsive"></a>
+			<a href="https://datenschule.de"><img src="https://datenschule.de/daily.jpg" class="img-responsive"></a>
 		</div>
 	</div>
 </div>
