datenschule-banner translation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@ description: Offenes Wissen für die digitale Gesellschaft
 <div class="container padded-row start-datenschule-banner">
 	<div class="row">
 		<div class="col-md-12">
-			<p>
-				Mit der <a href="https://datenschule.de">Datenschule</a> nehmen wir an der Google Impact Challenge teil. <a href="https://impactchallenge.withgoogle.com/deutschland/charity/open_knowledge">Stimme für uns ab!</a>
-			</p>
+			<p>{% t start.Banner %}</p>
 		</div>
 	</div>
 	<div class="row">
