add alumni page for former members of the board

--- a/vorstand/index.de.html
+++ b/vorstand/index.de.html
@@ -15,3 +15,4 @@ menu_vorstand: yes
 {% assign order=forloop.index0|modulo:2 %}
 {% include person.html person=person order=order %}
 {% endfor %}
+<a href="/vorstand_alumni">ehemalige Mitglieder des Vorstands</a>
