--- a/projekte/index.html
+++ b/projekte/index.html
@@ -12,40 +12,33 @@ background: backgrounds/projekte.jpg
   <p>{% t projekte.Intro %}</p>
 </div>
 
+<h3 class="subtle-section">{% t projekte.Politik %}</h3>
 <div class="row row-flex row-flex-wrap">
-{% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
+{% assign projects = site.projects | where: "type", "politics" | sort:"order","last" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
 {% endfor %}
 </div>
 
-<h3 class="subtle-section">{% t projekte.Events %}</h3>
+<h3 class="subtle-section">{% t projekte.Bildung %}</h3>
 <div class="row row-flex row-flex-wrap">
-{% assign projects = site.projects | where: "type","event" | sort:"date","last" %}
-{% for project in projects reversed %}
+{% assign projects = site.projects | where: "type", "education" | sort:"order","last" %}
+{% for project in projects %}
   {% include project_list.html project=project %}
 {% endfor %}
 </div>
 
-<h3 class="subtle-section">{% t projekte.Tools %}</h3>
+<h3 class="subtle-section">{% t projekte.Forschung %}</h3>
 <div class="row row-flex row-flex-wrap">
-  {% assign projects = site.projects | where: "type","tool" | sort:"tool","last" %}
+  {% assign projects = site.projects | where: "type", "research" | sort:"order","last" %}
   {% for project in projects %}
   {% include project_list.html project=project %}
   {% endfor %}
 </div>
 
-<h3 class="subtle-section">{% t projekte.Forschungsprojekte %}</h3>
-<div class="row row-flex row-flex-wrap">
-{% assign projects = site.projects | where: "type", "research" %}
-{% for project in projects %}
-  {% include project_list.html project=project %}
-{% endfor %}
-</div>
-
 <h3 class="subtle-section">{% t projekte.Archiv %}</h3>
 <div class="row row-flex row-flex-wrap">
-{% assign projects = site.projects | where: "type", "archive"  | sort:"featured","last" %}
+{% assign projects = site.projects | where: "type", "archive"  | sort:"order","last" %}
 {% for project in projects %}
   {% include project_list.html project=project %}
 {% endfor %}
