--- a/index.html
+++ b/index.html
@@ -82,18 +82,16 @@ description: Offenes Wissen für die digitale Gesellschaft
 		</div>
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 col-xs-12 padded-top">
-				<form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form"
-					  target="_blank"
-					  role="form">
+				<form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=4ed2decd59" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="text-center mc-form" target="_blank">
 					<div class="input-group">
 						<input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required>
 				  	<span class="input-group-btn">
 						<button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">{% t start.NewsletterJa %}</button>
-						<div style="position: absolute; left: -5000px;">
+						<span style="position: absolute; left: -5000px;">
 							<input type="text" name="b_929f1e07936386d34833e20d1_bb63fcab72" value="">
 							<!-- set to newsletter only-->
 							<input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
-						</div>
+						</span>
 				  	</span>
 					</div>
 				</form>
