list website technology

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -51,6 +51,13 @@ background: backgrounds/services.jpg
 		<dt>{% t impressum.Webseitendesign %}:</dt>
 		<dd><a href="http://nadinestammen.de/">Nadine Stammen</a>, Felix Becker, <a href="http://stefanwehrmeyer.com/">Stefan Wehrmeyer</a>, Andrej Sandorf</dd>
 	</dl>
+	<dl>
+		<dt>{% t impressum.Tech %}:</dt>
+		<dd>
+			{% t impressum.TechBROWSERSTACK %}<br>
+			{% t impressum.TechJEKYLL %}
+		</dd>
+	</dl>
 
 	<hr>
 
