anchor id for newsletter

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ description: Offenes Wissen für die digitale Gesellschaft
 	</div>
 </div>
 
-<div class="dark-section darker">
+<div id="newsletter" class="dark-section darker">
 	<div class="container padded-row">
 		<div class="row">
 			<div class="col-md-12">
