--- a/vorstand_alumni/index.en.html
+++ b/vorstand_alumni/index.en.html
@@ -8,7 +8,7 @@ menu_vorstand: yes
 {% assign board_alumni = site.data.team | where:"board_alumni",1 | sort: "name" %}
 <div class="lurking-header">
   <h1>Former members of the board</h1>
-  <p>The following persons were members of the board in the past</p>
+  <p class="text-center">The following persons were members of the board in the past</p>
 </div>
 {% for person in board_alumni %}
 {% assign order=forloop.index0|modulo:2 %}
