add policy group contact

--- a/services/index.de.html
+++ b/services/index.de.html
@@ -89,7 +89,7 @@ menu_services: yes
 
 		<div>
 			<div class="title">Policy:</div>
-			In Stellungnahmen, Gesetzesentwürfen und auf Diskussionsveranstaltungen beziehen wir Position zu Entwicklungen rund um digitale Themen, Informationsfreiheit und offenen Daten.<br/>
+			In Stellungnahmen, Gesetzesentwürfen und auf Diskussionsveranstaltungen beziehen wir Position zu Entwicklungen rund um digitale Themen, Informationsfreiheit und offenen Daten. Nehmen Sie mit uns Kontakt auf: <a href="mailto:policy@okfn.de">policy@okfn.de</a> <br/>
 			<div class="reference">
 				<div>Referenzbeispiele:</div>
 				Transparenzgesetz Hamburg/ Berlin,
